@@ -13,7 +13,6 @@ import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class PostService {
@@ -75,7 +74,7 @@ public class PostService {
                     post.getTimestamp());
             List<String> likes = likeService.getLikesByPost(post).stream()
                     .map(like -> like.getUser().getUsername())
-                    .collect(Collectors.toList());
+                            .toList();
             postLikesResponseDto.setLikes(likes);
             responseDtos.add(postLikesResponseDto);
         }
